final alterations in the body + footer

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title> The Dog Magazine </title>
     <link rel="stylesheet" href="./style.css" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
@@ -23,10 +23,9 @@
           <a href="#">About us</a>
         </nav>
     </header>
-
     <section class="big-news">
         <div class= "imagewrapper">
-            <img class="big-pic" src="./oscar-sutton-yihlaRCCvd4-unsplash.jpg" alt="dog running on the beach">
+            <img class="big-pic" src="./raquel-garcia-5CwzyUTKuUo-unsplash.jpg" alt="dogs running">
         </div>
         <div class="grid-1">
             <h2>How much exercise does your dog need daily to be happy?</h2>
@@ -40,7 +39,10 @@
            <img class="small-pic" src="./james-lacy-xe_MtM-ixlw-unsplash.jpg" alt="Dog eating a treat">
         <div class="medium-news">
            <h2>Sharing is caring</h2>
-           <h3>15 natural treats recipes for you and your dog!</h3>
+           <h3>While there are some human foods that dogs should never eat, for the most part what’s healthy for you is healthy for your pet.  </br>
+            Here are some recipes for snacks so healthy and delicious that you and your dog will argue over the last bite.
+            
+            </h3>
         </div>
         </div>
         <div class= "grid-3">
@@ -63,15 +65,18 @@
             <img class="small-pic" src="./matt-nelson-aI3EBLvcyu4-unsplash.jpg" alt="Dogs on a walk">
             <div class="medium-news">
               <h2>Exercise and socialization?</h2>
-              <h3>Pros and cons of group walking</h3>
+              <h3>Pros and cons of pack walking</h3>
+              <p> Pack walking is a way to exercise, properly socialize, and train that should be safe and fun for all involved. But is your dog ready for this type of adventure?</p>
            </div>
         </div>  
     </section>
-      <footer class="footer-info"> 
-          <h2>Contact us</h2>
-          <img class="footer-pic" src="./Social-Icons-01-Free-SVG.png" alt="Social media icons"></p>
-      </footer> 
-  
 
+    <footer> 
+        <nav class="footer-info">
+          <h2>Contact us</h2> 
+          <img class="footer-pic" src="./Social-Icons-01-Free-SVG.png" alt="Social media icons"></p>
+        </nav>
+    </footer> 
+  
   </body>
 </html>
