refactored the css code and also updated the styling on the small news cards

--- a/code/index.html
+++ b/code/index.html
@@ -36,105 +36,73 @@
         </div>
       </section>
         <!-- The other news  -->
-      <section>
-        <div class="news-container">
-          <div class="item-1">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-2">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-3">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-4">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-5">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-6">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-7">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-8">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-9">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-10">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-11">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-          <div class="item-12">
-            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
-              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
-                <article>
-                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
-                </article>
-            </a>
-          </div>
-        </section>
+    <section>
+      <div class="news-container">
+       <div class="card">
+         <a href="https://www.flickr.com/photos/kalexanderson/44773047394/">
+           <div class="thumbnail" style="background-image:  url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+           </div>
+            <article>
+              <h2>A space princess</h2>
+            </article>
+           </a>
+         </div>
+        <div class="card">
+         <a href="https://www.flickr.com/photos/kalexanderson/44773047394/">
+           <div class="thumbnail" style="background-image:  url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+           </div>
+            <article>
+              <h2>A space princess</h2>
+            </article>
+           </a>
+         </div>
+        <div class="card">
+         <a href="https://www.flickr.com/photos/kalexanderson/44773047394/">
+           <div class="thumbnail" style="background-image:  url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+           </div>
+            <article>
+              <h2>A space princess</h2>
+            </article>
+           </a>
+         </div>
+        <div class="card">
+         <a href="https://www.flickr.com/photos/kalexanderson/44773047394/">
+           <div class="thumbnail" style="background-image:  url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+           </div>
+            <article>
+              <h2>A space princess</h2>
+            </article>
+           </a>
+         </div>
+        <div class="card">
+         <a href="https://www.flickr.com/photos/kalexanderson/44773047394/">
+           <div class="thumbnail" style="background-image:  url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+           </div>
+            <article>
+              <h2>A space princess</h2>
+            </article>
+           </a>
+         </div>
+        <div class="card">
+         <a href="https://www.flickr.com/photos/kalexanderson/44773047394/">
+           <div class="thumbnail" style="background-image:  url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+           </div>
+            <article>
+              <h2>A space princess</h2>
+            </article>
+           </a>
+         </div>
+        <div class="card">
+         <a href="https://www.flickr.com/photos/kalexanderson/44773047394/">
+           <div class="thumbnail" style="background-image:  url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+           </div>
+            <article>
+              <h2>A space princess</h2>
+            </article>
+           </a>
+         </div>
+       </div>
+     </section>
     </div>
  </body>
 </html>
