--- a/code/index.html
+++ b/code/index.html
@@ -26,9 +26,27 @@
             Your <span>no. 1</span> fake news source
           </h2>
         </div>
-        <!-- <nav class="site-header-nav"></nav> -->
       </div>
+      <nav class="site-header-mobile-nav">
+        <input id="toggle" type="checkbox" style="visibility:hidden">
+          <label for="toggle"><i class="fas fa-bars"></i></label>
+          <div class="site-header-mobile-nav-menu"> 
+            <ul>
+              <li><a href="">Fake News</a></li>
+              <li><a href="">More Fake News</a></li>
+              <li><a href="">Get Help</a></li>
+            </ul>
+          </div>
+      </nav>
+      <nav class="site-header-nav">
+        <ul>
+          <li><a href="">Fake News</a></li>
+          <li><a href="">More Fake News</a></li>
+          <li><a href="">Get Help</a></li>
+        </ul>
+      </nav>
     </header>
+    
     <hr class="thick" />
     <main>
       <section id="site-big-news" class="section-news">
