--- a/code/index.html
+++ b/code/index.html
@@ -39,15 +39,15 @@
            <img class="small-pic" src="./james-lacy-xe_MtM-ixlw-unsplash.jpg" alt="Dog eating a treat">
         <div class="medium-news">
            <h2>Sharing is caring</h2>
-           <h3>While there are some human foods that dogs should never eat, for the most part what’s healthy for you is healthy for your pet.  </br>
+           <p>While there are some human foods that dogs should never eat, for the most part what’s healthy for you is healthy for your pet.  </br>
             Here are some recipes for snacks so healthy and delicious that you and your dog will argue over the last bite.
-            
-            </h3>
+          </p>
         </div>
         </div>
         <div class= "grid-3">
             <img class="little-pic" src="./laula-co-UXCImW3IVg0-unsplash.jpg" alt="Dog doing agility exercise">
-            <h2>Agility: the new bonding exercise that you need to learn about</h2>
+            <h2>Agility: </h2>
+            <h3 class="sub-text">the new bonding exercise that you need to learn about</h3>
         </div>
         <div class= "grid-4">
             <img class="little-pic" src="./jimmy-conover-ajPr3kQBWFw-unsplash.jpg" alt="Dog traveling in a car">
@@ -55,11 +55,13 @@
         </div>
         <div class= "grid-5">
             <img class="little-pic" src="./jamie-street-uNNCs5kL70Q-unsplash.jpg" alt="Dog caring a branch">
-            <h2>Puppy's teething. What to do when your dog chews everything</h2>
+            <h2>Puppy's teething.</h2>
+            <h3 class="sub-text">What to do when your dog chews everything</h3>
         </div>
         <div class= "grid-6">
             <img class="little-pic" src="./sdf-rahbar-dw7paFI1jnM-unsplash-2.jpg" alt="Dog under blanckets">
-            <h2>Get ready for the winter time! Your fury friend feels cold too</h2>
+            <h2>Get ready for the winter time!</h2>
+            <h3 class="sub-text">Your fury friend feels cold too</h3>
         </div>
         <div class= "grid-7">
             <img class="small-pic" src="./matt-nelson-aI3EBLvcyu4-unsplash.jpg" alt="Dogs on a walk">
