--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,6 @@
   <meta name="author" content="Isabel González">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./resources/css/style.css" />
-  <link rel="stylesheet" href="./resources/css/queries.css" />
   <!--Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +30,7 @@
       <!-- Logo and navbar -->
       <nav>
         <div class="nav-bar">
+          <!--Logo created with the logo generator tool by hatchful.shopofy.com-->
           <img class="logo-transparent" src="./resources/img/brand-assets/logo.png" alt="nuntii logo">
           <ul class="main-nav">
             <li><a href="#jump-to-main">Today's News</a></li>
@@ -55,15 +55,13 @@
     <section class="main-news" id="jump-to-main">
       <!--News of the day + some copy and cta-button -->
       <div class="main-news-container">
-        <img class="main-news-img"
-          src="https://images.unsplash.com/photo-1525434280327-e525e03f17ef?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80"
-          alt="Picture of a capybara" />
+        <img class="main-news-img" src="./resources/img/site-content/capybara.jpeg" alt="Picture of a capybara" />
         <div class="main-news-contents">
           <h2>News of the Day</h2>
           <h3 class="main-subtitle">No More Capybara Hunting in Colombia</h3>
           <p>... or almost. Colombian law enforcement arrested an <a
               href="https://www.elespectador.com/judicial/cae-presunta-red-de-caza-ilegal-de-chiguiro-que-vendia-su-carne-en-malas-condiciones/">illegal
-              capybara haunting network</a> in the region of
+              capybara hunting network</a> in the region of
             Casanare. The organization was not only hunting these adorable hamster-like creatures, but they were also
             selling their meat in awful sanitary conditions! Their arrest is part of a recent initiative for the
             conservation of the species in the South American country.
@@ -72,9 +70,7 @@
             Capybaras (or chiguiros, as they are called in Colombia) are a protected species under Colombian law. Sport
             hunting was banned decades ago, and commercial hunting is only allowed for three months a year. Obtaining a
             license to hunt and sell capybara isn't easy, either! So it's good to hear that authorities are making sure
-            people are actually leaving chiguiros alone.
-
-            Long live the world's biggest rodent!
+            people are actually leaving chiguiros alone. Long live the world's biggest rodent!
           </p>
           <button class="cta-button donate" onclick="window.location.href='#jump-to-featured';">More news
             please!</button>
@@ -181,7 +177,7 @@
       <div class="footer-container">
         <img class="logo-transparent" src="./resources/img/brand-assets/logo_transparent.png" alt="nuntii logo">
         <ul class="footer-list">
-          <!--SoMe icons-->
+          <!--Social Media Icons-->
           <li class="footer-list-item">
             <div class="social-icons">
               <a class="social-icon" href="https://www.tiktok.com/" target="_blank"><i
@@ -194,10 +190,11 @@
                   class="fab fa-facebook facebook"></i></a>
             </div>
           </li>
-          <!--Copyright disclaimer-->
+          <!--Contact-->
           <li class="footer-list-item">
             <p><a class="author-email" href="mailto:webmaster@example.com">jane_doe@nuntii.com</a></p>
           </li>
+          <!--Copyright disclaimer-->
           <li class="footer-list-item">
             <p class="copyright">nuntii © 2021</p>
           </li>
@@ -209,3 +206,18 @@
 </body>
 
 </html>
+
+<!--IMAGE CREDITS (Unsplash license): 
+
+Capybara - Karen Lau
+Happy Women - Tuấn Trương
+Elderly Couple - Chino Rocha
+Baseball Woman - Rachel Barkdoll
+Plastic Waste - Nick Fewings
+Woman with Headphones - Blaz Erzetic
+Exercise Woman - Jonathan Borba
+Meditation - David Brooke Martin
+City - Andre Benz
+Tiger - Miranda Richey
+
+-->
