Adding gradient to footer, adding text-overflow: ellips; though not really working cuz text continues after ellips.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         </div>
         <div class="big2">
           <h3>Underwater life returns to the reefs</h3>
-          <p>For many years the habitants of the coral reef has been decresing but now we can se a increes in spieces.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit odio et lorem commodo volutpat. Proin tincidunt nunc ac aliquam gravida. Nunc a lectus est. Pellentesque turpis velit, auctor eget lectus vel, vulputate accumsan ipsum. Morbi mattis vestibulum mattis. Praesent sit amet condimentum ante. Ut at ex justo. Cras sit amet lectus ut quam tristique pharetra non eget libero. Suspendisse eget imperdiet felis. Curabitur interdum pharetra suscipit. Donec sem velit, accumsan sollicitudin massa non, fringilla volutpat massa. Sed id purus leo.
+
+            Maecenas sollicitudin tellus non sollicitudin fermentum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla facilisi. Morbi aliquam ipsum in erat cursus, et dictum orci laoreet. Donec quis sodales sem, ut accumsan enim. Morbi pellentesque, arcu eu bibendum ullamcorper, mauris urna ultrices leo, nec porta arcu ligula quis ipsum. Aenean maximus nunc quam, quis mollis justo sodales vitae.
+            
+            Quisque ut dolor scelerisque, eleifend tortor vel, consectetur eros. Aenean condimentum commodo fringilla. Donec sed lorem eu sapien hendrerit ultricies ac et enim. Nam fringilla, lacus lacinia pulvinar sollicitudin, metus purus aliquam justo, non maximus libero est ac dui. Donec ultricies finibus purus. Aliquam dolor diam, feugiat et ultricies vel, hendrerit sed justo. Morbi imperdiet non augue ac porttitor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis ullamcorper nibh vitae aliquam iaculis. Fusce rhoncus bibendum urna vitae ultrices. Donec interdum, erat id aliquet interdum, metus arcu hendrerit felis, vel semper purus erat ac felis.</p>
       </div>
     </section>
 
@@ -40,49 +44,49 @@
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2012/03/03/23/52/sea-21649_960_720.jpg " alt="jellyfish">
           <h4>Jellyfish is thriving</h4>
-          <p>jellyfishhhbhbjhb</p>
+          <p>Nam felis sapien, consectetur sit amet massa ut, tempor dictum quam. Cras vitae ipsum sem. Sed non pulvinar nulla. Fusce tempor eget sapien elementum rhoncus. Etiam porttitor porta gravida. Cras mi justo, rutrum in orci sit amet, tristique egestas quam. Proin mattis eu eros quis posuere. Integer interdum sapien et metus euismod consectetur. Aliquam feugiat in turpis vel tincidunt. Nulla euismod felis at sapien hendrerit, sodales pretium ipsum feugiat. Integer vel lorem orci. Cras tincidunt ut eros vel laoreet. Proin quis semper lacus.</p>
         </div>
       </article>
       <article class="other2">
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2013/11/01/11/13/dolphin-203875_960_720.jpg" alt="Dolphin">
           <h4>Does dolphins pose for pictures?</h4>
-          <p>hbjhbvjhvhjb</p>
+          <p>Maecenas sollicitudin tellus non sollicitudin fermentum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla facilisi. Morbi aliquam ipsum in erat cursus, et dictum orci laoreet. Donec quis sodales sem, ut accumsan enim. Morbi pellentesque, arcu eu bibendum ullamcorper, mauris urna ultrices leo, nec porta arcu ligula quis ipsum. Aenean maximus nunc quam, quis mollis justo sodales vitae.</p>
         </div>
       </article>
       <article class="other3">
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2014/07/08/13/38/manatee-387194_960_720.jpg" alt="Manatee greeting a diver">
           <h4>The manatee is an endangered species</h4>
-          <p>kjnjhvgcuhb</p>
+          <p>Nullam in libero vitae lectus semper sagittis. Sed molestie iaculis pharetra. Cras at ligula id tellus ornare elementum pretium nec diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque finibus tempus risus. Fusce vestibulum nibh vel magna vehicula, rhoncus volutpat odio sodales. Etiam eleifend scelerisque ultricies. Praesent dictum mauris et neque accumsan, et convallis nibh porta. In id tellus fermentum, consectetur ipsum eu, gravida lorem. Pellentesque massa orci, tincidunt non felis eget, iaculis egestas lacus. Nulla nec nunc ipsum. Mauris ut est ut magna porta volutpat.</p>
         </div>
       </article>
       <article class="other4">
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2012/03/04/00/02/animal-21731_960_720.jpg" alt="Sawfish">
           <h4>The Sawfish - carpenter of the ocean?</h4>
-          <p>hbbvhgcugv</p>
+          <p>Quisque ut dolor scelerisque, eleifend tortor vel, consectetur eros. Aenean condimentum commodo fringilla. Donec sed lorem eu sapien hendrerit ultricies ac et enim. Nam fringilla, lacus lacinia pulvinar sollicitudin, metus purus aliquam justo, non maximus libero est ac dui. Donec ultricies finibus purus. Aliquam dolor diam, feugiat et ultricies vel, hendrerit sed justo. Morbi imperdiet non augue ac porttitor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis ullamcorper nibh vitae aliquam iaculis. Fusce rhoncus bibendum urna vitae ultrices. Donec interdum, erat id aliquet interdum, metus arcu hendrerit felis, vel semper purus erat ac felis.</p>
         </div>
       </article>
       <article class="other5">
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2015/07/27/19/47/turtle-863336_960_720.jpg" alt="turtle">
           <h4>Turtles are actually quite grumpy</h4>
-          <p>hbgcftcyb</p>
+          <p>In ac dapibus leo, non rutrum libero. Duis ut lorem dolor. Mauris vitae nisl ante. Integer et suscipit tellus. Nullam bibendum mi eget risus facilisis tincidunt. Maecenas volutpat ornare accumsan. Morbi ut enim placerat sem elementum euismod eu vel ipsum. Vestibulum dui nunc, faucibus ac tincidunt eget, condimentum eleifend nisi. Nullam diam ante, dictum et feugiat at, pellentesque in tellus. Curabitur ultrices, mauris sit amet convallis sollicitudin, dolor leo auctor nunc, non placerat dui dui ac urna. Mauris interdum euismod condimentum. Vivamus tempus magna at lobortis ullamcorper. Fusce a scelerisque velit, a efficitur massa.</p>
         </div>
       </article>
       <article class="other6">
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2016/02/22/18/46/underwater-1216244_960_720.jpg" alt="Fish in underwater building">
           <h4>Fish returning to Atlantis</h4>
-          <p>hghgcvubonp</p>
+          <p>Curabitur elementum sapien vitae velit scelerisque, ut viverra nulla posuere. Curabitur eu ligula eget ante varius blandit eu eu eros. Vestibulum diam lacus, malesuada in sapien quis, ultricies pharetra turpis. Nam turpis lorem, lacinia eu rhoncus et, placerat id tellus. Maecenas sed sagittis turpis. Integer tincidunt eu erat eu pulvinar. Maecenas posuere quam quam, sed porta massa pretium vitae. Praesent at tortor massa. Curabitur a consequat leo, at posuere ligula. Curabitur blandit nunc et tempor molestie. Fusce congue mi eget odio scelerisque, sed porttitor diam venenatis. Nam ut vehicula ex, vitae mattis tortor. Vivamus viverra semper tellus, a tincidunt nulla suscipit in. Quisque feugiat quam ex, sit amet elementum tellus accumsan eget. Proin at dui scelerisque, ornare mauris ut, sodales enim. Nam sit amet venenatis odio, ac suscipit risus.</p>
         </div>
       </article>
       <article class="other7">
         <div>
           <img class="img-news" src="https://cdn.pixabay.com/photo/2014/08/15/11/29/beach-418742_960_720.jpg" alt="coast where mountain meets ocean">
           <h4>Hidden locations in the medditeranian sea</h4>
-          <p>bjgfguv</p>
+          <p>Vivamus dictum, quam vel rhoncus sagittis, lacus massa imperdiet lacus, ut scelerisque libero diam eu purus. Integer faucibus convallis tortor. Ut non tempus erat, a fringilla ex. Quisque in mauris a felis tincidunt maximus. Nulla facilisi. Mauris at aliquet magna, vitae ultrices mi. Proin molestie elit pulvinar, ornare quam in, laoreet justo. Sed eget tristique odio. Nam sit amet lacus bibendum, pulvinar erat in, rhoncus enim. Aenean id semper orci. Fusce ac leo in neque finibus varius nec at felis.</p>
         </div>
       </article>
     </section>
