--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: birdviews</title>
+    <title>🪶 birdviews</title>
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
   
