change link to main news-article

--- a/code/index.html
+++ b/code/index.html
@@ -46,7 +46,7 @@
         <img src="https://images.unsplash.com/photo-1615092296061-e2ccfeb2f3d6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" 
         alt="A forest on fire"> 
         <div>
-          <a href="https://www.krcu.org/post/fact-check-what-does-fox-actually-say#stream/0" target="_blank"><h2>July world's hottest month ever recorded</h2></a>
+          <a href="https://www.bbc.com/news/world-us-canada-58208792" target="_blank"><h2>July world's hottest month ever recorded</h2></a>
           <p>July was the world's hottest month ever recorded, a US federal scientific and regulatory agency has reported.
 
             The data shows that the combined land and ocean-surface temperature was 0.93C (1.68F) above the 20th Century average of 15.8C (60.4F).
