Added footer and new logo and fonts

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <!--Title font: "Averia Serif Libre"-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300&display=swap" rel="stylesheet">
+  <!--Signature font: Nothing You Could Do-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -18,10 +26,10 @@
 
   <header class="header-grid-container">
     <div class="grid-pic">
-      <img src="./logo.PNG"/>
+      <img src="./new_logo.png"/>
     </div>
     <div class="title-grid">
-      <h1>Worlds Wildest News</h1>
+      <h1>WORLD WILD NEWS</h1>
     </div>
   </header>
   
@@ -76,21 +84,13 @@
 
         The content - including footage of a monkey that appears to be trying to eat the phone - has been widely shared on social media since Zackrydz Rodzi posted it on Twitter.</p>
     </div>
-
-    
-
+    <footer>
+      <p>Designed and developed by </p>
+      <p class="signature">Lovisa Carling</p>
+    </footer>
   </div>
-
-  
-
   </section>
 
-  <footer>
-    <div>
-    <h4>Designed and developed by Lovisa Carling</h4>
-    </div>
-  </footer>
-  </section>
 
 
 
