try out version

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,71 @@
-<!DOCTYPE html>
+<!DOCTYPE html> -->
 <html>
+  
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    
+   <!-- dont forget the meta tag for responsiveness -->
   </head>
+  
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img class="header-child technico" src="../code/logo.svg" alt="Technico" />
+        <img class="header-child zebra" src="./images.jpg" alt="zebra"/>
+        <p class="titel">Zebra News</p>         
+          <nav class="header-child navigation">
+            <ul>
+              <li><a href="https://www.blueletterbible.org/">Big  Zebra News</a></li>
+              <li><a href="https://www.msn.com/nl-nl/nieuws">Small  Zebra News</a></li>
+              <li><a href="#">Domestic Zebra News</a></li>
+              <li><a href="#">Foreign Zebra News</a></li>
+            </ul>
+
+          </nav>
+<!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <img class="big-news-picture" src="http://placeimg.com/550/350/arch" alt="Architecture"/>
+      <p class="big-news-tekst">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisi dui, interdum quis viverra vitae, tempus tincidunt ante. Sed finibus turpis non arcu laoreet consectetur. Donec vel porta felis. Etiam at enim ut odio pulvinar egestas ut ut sem. Sed id dui enim. Duis vulputate imperdiet metus, non pulvinar nulla blandit ac. Etiam gravida gravida ante at tincidunt. Mauris risus erat, congue in hendrerit id, laoreet quis elit. Donec risus ligula, posuere ut arcu vel, rhoncus eleifend tellus. Vivamus in arcu sollicitudin, pulvinar tellus in, lobortis est. Integer sit amet accumsan nibh. Mauris vulputate iaculis tellus. Donec facilisis elit non enim imperdiet luctus. Curabitur vehicula urna ante, at rhoncus nisi feugiat et. In tincidunt, erat sed luctus lobortis, elit orci egestas lorem, fringilla venenatis elit tortor a orci.
+      </p> --> -->
+<!-- The big news content -->
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-news">
+      <div class="small-news-1">
+        <img src="https://placeimg.com/250/150/animals" alt="animals"/>
+        <p class="small-news-tekst-1">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisi dui, interdum quis viverra vitae, tempus tincidunt ante. Sed finibus turpis non arcu laoreet consectetur. Donec vel porta felis. Etiam at enim ut odio pulvinar egestas ut ut sem. Sed id dui enim. Duis vulputate imperdiet metus, non pulvinar nulla blandit ac. Etiam gravida gravida ante at tincidunt. Mauris risus erat, congue in hendrerit id, laoreet quis elit. Donec risus ligula, posuere ut arcu vel, rhoncus eleifend tellus. Vivamus in arcu sollicitudin, pulvinar tellus in, lobortis est. Integer sit amet accumsan nibh. Mauris vulputate iaculis tellus. Donec facilisis elit non enim imperdiet luctus. Curabitur vehicula urna ante, at rhoncus nisi feugiat et. In tincidunt, erat sed luctus lobortis, elit orci egestas lorem, fringilla venenatis elit tortor a orci.
+        </p>
+      </div>
+      <div class="small-news-2">
+        <img src="https://placeimg.com/250/150/nature" alt="nature"/>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisi dui, interdum quis viverra vitae, tempus tincidunt ante. Sed finibus turpis non arcu laoreet consectetur. Donec vel porta felis. Etiam at enim ut odio pulvinar egestas ut ut sem. Sed id dui enim. Duis vulputate imperdiet metus, non pulvinar nulla blandit ac. Etiam gravida gravida ante at tincidunt. Mauris risus erat, congue in hendrerit id, laoreet quis elit. Donec risus ligula, posuere ut arcu vel, rhoncus eleifend tellus. Vivamus in arcu sollicitudin, pulvinar tellus in, lobortis est. Integer sit amet accumsan nibh. Mauris vulputate iaculis tellus. Donec facilisis elit non enim imperdiet luctus. Curabitur vehicula urna ante, at rhoncus nisi feugiat et. In tincidunt, erat sed luctus lobortis, elit orci egestas lorem, fringilla venenatis elit tortor a orci.
+        </p>
+      </div>
+      <div class="small-news-3">
+        <img src="https://placeimg.com/200/150/people" alt="people"/>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisi dui, interdum quis viverra vitae, tempus tincidunt ante. Sed finibus turpis non arcu laoreet consectetur. Donec vel porta felis. Etiam at enim ut odio pulvinar egestas ut ut sem. Sed id dui enim. Duis vulputate imperdiet metus, non pulvinar nulla blandit ac. Etiam gravida gravida ante at tincidunt. Mauris risus erat, congue in hendrerit id, laoreet quis elit. Donec risus ligula, posuere ut arcu vel, rhoncus eleifend tellus. Vivamus in arcu sollicitudin, pulvinar tellus in, lobortis est. Integer sit amet accumsan nibh. Mauris vulputate iaculis tellus. Donec facilisis elit non enim imperdiet luctus. Curabitur vehicula urna ante, at rhoncus nisi feugiat et. In tincidunt, erat sed luctus lobortis, elit orci egestas lorem, fringilla venenatis elit tortor a orci.
+        </p>
+      </div>
+      <div class="small-news-4">
+        <img src="https://placeimg.com/200/150/tech" alt="Tech">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisi dui, interdum quis viverra vitae, tempus tincidunt ante. Sed finibus turpis non arcu laoreet consectetur. Donec vel porta felis. Etiam at enim ut odio pulvinar egestas ut ut sem. Sed id dui enim. Duis vulputate imperdiet metus, non pulvinar nulla blandit ac. Etiam gravida gravida ante at tincidunt. Mauris risus erat, congue in hendrerit id, laoreet quis elit. Donec risus ligula, posuere ut arcu vel, rhoncus eleifend tellus. Vivamus in arcu sollicitudin, pulvinar tellus in, lobortis est. Integer sit amet accumsan nibh. Mauris vulputate iaculis tellus. Donec facilisis elit non enim imperdiet luctus. Curabitur vehicula urna ante, at rhoncus nisi feugiat et. In tincidunt, erat sed luctus lobortis, elit orci egestas lorem, fringilla venenatis elit tortor a orci.
+        </p>
+      </div>
     </section>
+    <section class="domestic-news">
+      
+    </section>
+    <section class="foreign-news"></section>
+
+<!-- The other news -->
   </body>
 </html>
