--- a/code/index.html
+++ b/code/index.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Hair in My Face News</title>
-    <link rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <header class="header">
-      <img class="logo" src="./logo.svg" alt="Technigo" />
-      <h1>Hair in My Face News</h1> 
-      <nav class="navigation">
-        <a href="#">Big news</a>
-        <a href="#">Small news</a>
-      </nav>
-    </header>
 
-    <section class="big-news">
-      <img class="big-news-image"src="./assets/Redhead.jpg" alt="Red" />
-      <p class="big-news-text">
-        “I love the feeling of the fresh air on my face and the wind blowing through my hair.”
+<head>
+  <meta charset="utf-8" />
+  <title>Hair in My Face News</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="icon" type="image/x-icon" href="./assets/hair-brushes.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <header class="header">
+    <img class="logo" src="./assets/hair-brushes.png" alt="Technigo" />
+    <h1>Hair in My Face News</h1>
+    <nav class="navigation">
+      <a href="#">Big news</a>
+      <a href="#">Small news</a>
+    </nav>
+  </header>
+
+  <section class="big-news">
+    <img class="big-news-image" src="./assets/Redhead.jpg" alt="Red" />
+    <div class="big-news-text">
+      <h2>“It´s hard to make speeches with hair in your face”.</h2>
+      <p>
+        Lorem Ipsum is the single greatest threat
+        Lorem Ipsum is the single greatest threat
+        Lorem Ipsum is the single greatest threat
+        Lorem Ipsum is the single greatest threat
       </p>
-    </section>
+    </div>
+  </section>
 
-    <section class="grid-container">
-      <div class="grid-item">
-        <img class="grid-image"src="./assets/HairBlow1.jpg" alt="1" />
-        <div class="grid-text">
-          <h2>Windy day in august</h2>
-          <p>
-            Lorem Ipsum is the single greatest threat 
-            Lorem Ipsum is the single greatest threat 
-            Lorem Ipsum is the single greatest threat 
-            Lorem Ipsum is the single greatest threat 
-          </p>
-        </div>
-
+  <section class="grid-container">
+    <div class="grid-item">
+      <img class="grid-image" src="./assets/HairBlow1.jpg" alt="1" />
+      <div class="grid-text">
+        <h2>Windy day in august</h2>
+        <p>
+          Lorem Ipsum is the single greatest threat
+          Lorem Ipsum is the single greatest threat
+          Lorem Ipsum is the single greatest threat
+          Lorem Ipsum is the single greatest threat
+        </p>
       </div>
 
-      <div class="grid-item">
-        <img class="grid-image"src="./assets/HairBlow3.jpg" alt="3" />
-        <div class="grid-text">
-          <h2>Windy day in august</h2>
-          <p>
-            Lorem Ipsum is the single greatest threat
-          </p>
-        </div>
-      </div> 
+    </div>
 
-      <div class="grid-item">
-        <img class="grid-image"src="./assets/HairBlow2.jpg" alt="2" />
-        <div class="grid-text">
-          <h2>Windy day in august</h2>
-          <p>
-            Lorem Ipsum is the single greatest threat
-          </p>
-        </div>
-      </div> 
-      
-      <div class="grid-item">
-        <img class="grid-image"src="./assets/curtan.jpg" alt="4" />
-        <div class="grid-text">
-          <h2>Windy day in august</h2>
-          <p>
-            Lorem Ipsum is the single greatest threat
-          </p>
-        </div>
+    <div class="grid-item">
+      <img class="grid-image" src="./assets/HairBlow3.jpg" alt="3" />
+      <div class="grid-text">
+        <h2>Windy day in august</h2>
+        <p>
+          Lorem Ipsum is the single greatest threat
+        </p>
       </div>
-    
-    </section>
-  </body>
+    </div>
+
+    <div class="grid-item">
+      <img class="grid-image" src="./assets/HairBlow2.jpg" alt="2" />
+      <div class="grid-text">
+        <h2>Windy day in august</h2>
+        <p>
+          Lorem Ipsum is the single greatest threat
+        </p>
+      </div>
+    </div>
+
+    <div class="grid-item">
+      <img class="grid-image" src="./assets/curtan.jpg" alt="4" />
+      <div class="grid-text">
+        <h2>Where Did the Wind Go?</h2>
+        <p>
+          I love the feeling of the fresh air on my face and the wind blowing through my hair.
+        </p>
+      </div>
+    </div>
+
+  </section>
+</body>
+
 </html>
