Made h1 a span, styled big news width.

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <img class="logo" src="./assets/hair-brushes.png" alt="Technigo" />
-    <h1>Hair in My Face News</h1>
+    <span class="header-title">Hair in My Face News</span>
     <nav class="navigation">
       <a href="#">Big news</a>
       <a href="#">Small news</a>
