hover effects, animation on logoo and quote in the end

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="fox-logo">
         <img class="the-fox" src="./foxlogo.svg" alt="team foxes logotype" />
-        <h1>Fox News</h1>
+        <h1>Foxy</h1>
       </div>
       <nav class="navigation">
           <a id="link-id" href="#">About The Foxes</a>
@@ -22,6 +22,12 @@
           <a class="button-link" href="#">Subscribe!</a> 
       </nav>
     </header>
+
+    <section class="section-heading">      
+      <div>
+      <h2>This weeks headnews</h2>
+      </div>
+    </section>
 
     <section class="big-news-container">
       <!-- The big news content -->
@@ -32,9 +38,15 @@
         </div>
         <div>
          <p>FONT FAMILIES CAN sell for hundreds of dollars. Gotham, a popular typeface used by President Barack Obama’s campaign and many others, costs nearly $1,000 to license a complete set of 66 different styles. But The League of Moveable Type, gives all of its fonts away for free. What's more, it makes them open source, so that other people can modify the fonts and make their own versions of them.</p>
-          <a class="big-news-link" href="https://www.wired.com/story/open-source-fonts-love-letters-design-community/"> Read all about it on WIRED </a>
+          <a href="https://www.wired.com/story/open-source-fonts-love-letters-design-community/"> Read all about it on WIRED </a>
         </div>
       </section>
+    </section>
+
+    <section class="section-heading">      
+      <div>
+      <h2>Dig in to other news!</h2>
+      </div>
     </section>
 
     <section class="small-news-container">
@@ -42,51 +54,59 @@
       <div class="small-news-item"> 
         <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
           <img class="small-news-img" src="./color-img.png" alt="#"/>
-        <h3 class="small-news-text">Humanity’s Obsession With Color Has Shaped Our Modern World.</h3>
+        <h3>Humanity’s Obsession With Color Has Shaped Our Modern World.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
         <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> 
           <img class="small-news-img" src="./facemask.png" alt="facemask"/>
-        <h3 class="small-news-text">18 Face Masks We Actually Like to Wear.</h3>
+        <h3>18 Face Masks We Actually Like to Wear.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
         <a href="https://designmuseum.org/discover-design/all-design-objects/post-it-notes"> 
           <img class="small-news-img" src="./postit.png" alt="postit-notes"/>
-        <h3 class="small-news-text">Why has this iconic paper pad stuck around for almost 40 years?</h3>
+        <h3>Why has this iconic paper pad stuck around for almost 40 years?</h3>
         </a>
       </div>
       <div class="small-news-item"> 
         <a href="https://designmuseum.org/discover-design/all-design-objects/thonet-chair-no-14"> 
           <img class="small-news-img" src="./thonet.png" alt="thonet-chair"/>
-        <h3 class="small-news-text">Thonet Chair No. 14 - If you’ve been to a cafe you’ve probably sat on it.</h3>
+        <h3>Thonet Chair No. 14 - If you’ve been to a cafe you’ve probably sat on it.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
         <a href="https://www.pacegallery.com/exhibitions/richard-avedon/"> 
           <img class="small-news-img" src="./avedon.png" alt="avedon"/>
-        <h3 class="small-news-text">Richard Avedon - In the American West, 1979-1984</h3>
+        <h3>Richard Avedon - In the American West, 1979-1984.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
         <a href="https://www.davidairey.com/logo-design-love"> 
           <img class="small-news-img" src="./logodesign.png" alt="book-cover"/>
-        <h3 class="small-news-text">Logo Design Love - A Guide to Creating Iconic Brand Identities.</h3>
+        <h3>Logo Design Love - A Guide to Creating Iconic Brand Identities.</h3>
         </a>
       </div>
       <div class="small-news-item"> 
         <a href="http://www.asalindstrom.com/"> 
           <img class="small-news-img" src="./lindstrom.png" alt="koppar"/>
-        <h3 class="small-news-text">Åsa Lindström - "Jag är min egen regissör i min produktion"</h3>
+        <h3>Åsa Lindström - "Jag är min egen regissör i min produktion".</h3>
         </a>
       </div>
 
     </section>
+
+    <section class="quote fade-in-text">      
+        <img src="./quotation-mark.svg" alt="quotation-mark">
+        <p> Have no fear of perfection - you'll never reach it.</p>
+    </section>
+
   </body>
 
     <div class="footer">
+      <a href="https://www.technigo.io/">
       <img class="technigo-logo" src="./logo.svg" alt="technigo-logo">
+      </a>
     </div>
 
 </html>
