--- a/code/index.html
+++ b/code/index.html
@@ -143,7 +143,7 @@
 
       <div class="small-news-container"> <img class="small-news-img" src="the-baxters.jpeg" alt="The Baxter Twins" /><div class="category-bottom">
         <p>Café</p>
-    </div><h4>headline</h4><p class="small-news-text">Hägerstensåsen has got a new café, right by the metro. The twins Fran and Martin Baxter hope that Slow Hands Café will be a meeting place for the people of Åsen.</p>
+    </div><h4>The Baxter Twins opens up café in Hägerstensåsen</h4><p class="small-news-text">Hägerstensåsen has got a new café, right by the metro. The twins Fran and Martin Baxter hope that Slow Hands Café will be a meeting place for the people of Åsen.</p>
   <p class="small-news-text">Read more on <a class="inline-link" href="https://www.mitti.se/nyheter/tvillingar-fran-liverpool-oppnade-kafe-pa-asen/repuhm!AW1zVXnlHbaMOPMGutz8Q/">mitti.se</a> (swedish article).</p></div>
 
       <div class="small-news-container"> <img class="small-news-img" src="sikta-med-fittan.jpg" alt="Sikta med fittan" /><div class="category-bottom">
@@ -153,7 +153,7 @@
       <div class="small-news-container"> <img class="small-news-img" src="wine-trade.jpg" alt="Wine Trade Wine Bar" /><div class="category-bottom">
         <p>Wine</p>
     </div><h4>Wine Trade office becomes wine bar</h4><p class="small-news-text">In October, the natural wine importer Wine Trade opens its own wine bar on Södermalm. At Bar Ninja, only organic and sustainable wine will be served - and there will also be room for wines from other importers.</p>
-  <p class="small-news-text">Read more at <a class="inline-link" href="https://winetrade.se/">winetrade.se</a></p></div>
+  <p class="small-news-text">Read more at <a class="inline-link" href="https://winetrade.se/">winetrade.se</a>.</p></div>
       
       </section>
 
