--- a/code/index.html
+++ b/code/index.html
@@ -106,6 +106,14 @@
     </section>
 
 
+  
+  <hr class="horizontal">
+
+  <div class="spotlight">
+  <h2 class="spotlight">Spotlight</h2></div>
+
+<hr class="horizontal">
+
 
     <section class="small-news-wrapper">
 
@@ -157,6 +165,9 @@
       
       </section>
 
+      <footer class="footer">
+Created by: Emelie, team 🐘 august 2021
+      </footer>
     <!-- <section class="small-news">
       <img class="small-news-img" src="#" />
       <p class="small-news-text"></p> -->
